# SoftwareRenderer

./: .gitignore  CMakeLists.txt  README.md
src/: canvas.cpp  canvas.h  main.cpp  objParser.cpp  objParser.h  parser.h  renderer.cpp  renderer.h  vector.cpp  vector.h
